Added robust cost functions

--- a/imu_initialization.tex
+++ b/imu_initialization.tex
@@ -41,4 +41,10 @@ Now, we have
 
 \section{Accelerometer}
 
+We first seek to solve the following problem
+
+Given $a^ x, b^ x \in \mathbb{R}^3$, find $^a R_b \in \mathrm{SO}(3)$ such that $^a x = ^a R_b * ^b x$, with no yaw.
+
+Then we can think about this as the following:
+
 \end{document}
