Added more here

--- a/rotation_between_3d_vectors.tex
+++ b/rotation_between_3d_vectors.tex
@@ -13,6 +13,16 @@
 \begin{document}
 \maketitle
 
+\section{Notation}
+
+\begin{itemize}
+\item $\circ$ is the group operator between two rotations.
+\item $\odot$ is the rotation operater acting between a rotation and a vector.
+\item $\cdot$ is the inner product operater acting between two vectors.
+\item $\times$ is the cross product operator acting betwen two vectors.
+\end{itemize}
+
+
 \section{Problem Statement}
 
 Let $a, b \in \mathbb{R}^3$ be unit vectors.
@@ -34,7 +44,7 @@ First, compute the inner product between $a$ and $b$:
 
 Now, if for some $\epsilon > 0$,
 \begin{IEEEeqnarray}{lCl}
-    \cos{\theta} & >= & \epsilon - 1
+    \cos{\theta} & \ge & \epsilon - 1
 \end{IEEEeqnarray}
 Then this means that the two vectors are sufficiently non-opposite.
 We can then compute the cross product from $a$ to $b$ as
